# openless

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  README.zh.md
.github/workflows/: ci.yml  release-tauri.yml
docs/: audit-2026-05-06.md
openless-all/app/: package-lock.json  package.json
openless-all/app/scripts/: windows-real-asr-insertion-smoke.ps1  windows-runtime-smoke.ps1  windows-smoke-suite.ps1  windows-ui-config.test.mjs
openless-all/app/src/: App.tsx
openless-all/app/src-tauri/: Cargo.toml  tauri.conf.json
openless-all/app/src-tauri/src/: combo_hotkey.rs  commands.rs  coordinator.rs  global_hotkey_runtime.rs  hotkey.rs  lib.rs  persistence.rs  qa_hotkey.rs  recorder.rs  shortcut_binding.rs  types.rs  windows_ime_ipc.rs
openless-all/app/src-tauri/src/asr/local/: cache.rs  download.rs  local_provider.rs  mod.rs  qwen_engine.rs  test_run.rs
openless-all/app/src/components/: Capsule.tsx  FloatingShell.tsx  ShortcutRecorder.tsx
openless-all/app/src/i18n/: en.ts  ja.ts  ko.ts  zh-CN.ts  zh-TW.ts
openless-all/app/src/lib/: capsuleLayout.test.ts  capsuleLayout.ts  hotkey.ts  ipc.ts  types.ts
openless-all/app/src/pages/: History.tsx  Overview.tsx  SelectionAsk.tsx  Settings.tsx  Translation.tsx
openless-all/app/src/state/: HotkeySettingsContext.tsx
openless-all/app/windows-ime/: OpenLessIme.vcxproj
openless-all/app/windows-ime/src/: dllmain.cpp
scripts/: bump-version.sh
